Fix profile setup alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,7 +25,7 @@
   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px 0px;
 }
 
-.ant-upload-wrapper {
+.ant-upload-wrapper:not(.avatar-upload) {
   display: flex !important;
   flex-direction: row-reverse !important;
   align-items: center !important;
